# agentstack-receipts-manager

./: .env.example  .gitignore  LICENSE.md  README.md  agentstack.json  pyproject.toml
src/: crew.py  main.py
src/config/: agents.yaml  tasks.yaml
src/tools/: __init__.py  directory_read_tool.py  directory_search_tool.py  gdrive_upload_tool.py  pdf_search_tool.py
